yew-macro/tests/macro/html-component-fail-unimplemented.stderr
error[E0277]: the trait bound `Unimplemented: yew::html::Component` is not satisfied
 --> $DIR/html-component-fail-unimplemented.rs:8:14
  |
8 |     html! { <Unimplemented /> };
  |              ^^^^^^^^^^^^^ the trait `yew::html::Component` is not implemented for `Unimplemented`

error[E0599]: no function or associated item named `new` found for struct `yew::virtual_dom::vcomp::VChild<Unimplemented>` in the current scope
 --> $DIR/html-component-fail-unimplemented.rs:8:14
  |
5 | struct Unimplemented;
  | --------------------- doesn't satisfy `Unimplemented: yew::html::Component`
...
8 |     html! { <Unimplemented /> };
  |              ^^^^^^^^^^^^^ function or associated item not found in `yew::virtual_dom::vcomp::VChild<Unimplemented>`
  |
  = note: the method `new` exists but the following trait bounds were not satisfied:
          `Unimplemented: yew::html::Component`
